Updating CKEditor to version 3.3. Fixing image-rel bug (thanks aldus), fixing CKE templates not showing. Some small corrections.

--- a/ckeditor/filemanager/browser/default/browser.css
+++ b/ckeditor/filemanager/browser/default/browser.css
@@ -20,42 +20,54 @@
  *
  * CSS styles used by all pages that compose the File Browser.
  */
-
-body    { background-color: #bcd5eb; margin-top: 0; margin-bottom: 0 }
-
-body, td, input, select  { font-size: 11px; font-family: Arial, Helvetica, Verdana }
-
-body.FileArea    { background-color: #f2f9f9; margin: 3px }
-
-form  { margin: 0; padding: 0 }
-
-img  { border: 0 }
-
-
-.ActualFolder  { font-size: 18px; font-weight: bold; background-color: #e5eff8; border: solid 2px #f0f0f0 }
-.Button, button { -moz-border-radius: 6px }
+body { background-color: #bcd5eb; margin-top: 0; margin-bottom: 0; }
+body, td, input, select { font-size: 11px; font-family: Arial, Helvetica, Verdana, sans-serif; }
+body.FileArea { background-color: #f2f9f9; margin: 3px; }
+form { margin: 0; padding: 0; }
+img { border: 0; }
+.ActualFolder {
+	font-size: 18px;
+	font-weight: bold;
+	background-color: #e5eff8;
+	border: solid 2px #f0f0f0;
+}
+.Button, button { -moz-border-radius: 6px; border-radius: 6px; }
 .FolderListCurrentFolder img { background-image: url(images/FolderOpened.gif); }
-.FolderListCurrentFolder a  { color: #bf2f42; font-weight: bold }
-
+.FolderListCurrentFolder a { color: #bf2f42; font-weight: bold; }
 .FolderListFolder img { background-image: url(images/Folder.gif); }
-.FolderListFolder a  { color: #036 }
-.fullHeight  { height: 100% }
+.FolderListFolder a { color: #003366; }
+.fullHeight { height: 100%; }
 .PopupButtons {
 	border-top: #d5d59d 1px solid;
 	background-color: #e3e3c7;
 	padding: 7px 10px 7px 10px;
 }
-.createFolder     { background-color: #dbf89f; cursor: pointer; width: 125px }
-.createFolder:hover   { background-color: #cf6 }
-/**/
-div.file       { background-color: #fff; text-align: center; margin: 3px; padding: 3px; width: 150px; height: 150px; float: left; clear: right; border: double 3px #ccc; -moz-border-radius: 8px  }
-div.file:hover    { background-color: #dbf89f }
-.fSize     { color: #444; background-color: #ededed; text-align: left; display: block; padding: 2px }
-.icon  { padding: 35px 10px 10px }
-.thumbnail    { margin: 4px auto; height: 64px; overflow: hidden }
-img.thumb    { padding: 2px; width: auto; height: 78px }
-img.icon   { padding-top: 37px }
-.filename       { background-color: #ededed; margin: 2px; padding: 2px; overflow: hidden }
-.filename a   { color: #036; font-size: 10px; text-decoration: none }
-fieldset.fUpload  { background-color: #f0f0f0;-moz-border-radius:6px; }
-
+.createFolder { background-color: #dbf89f; cursor: pointer; width: 125px; }
+.createFolder:hover { background-color: #ccff66; }
+div.file {
+	background-color: #ffffff;
+	text-align: center;
+	margin: 3px;
+	padding: 3px;
+	width: 150px;
+	height: 150px;
+	float: left;
+	border: double 3px #cccccc;
+	border-radius: 8px;
+	-moz-border-radius: 8px;
+}
+div.file:hover { background-color: #dbf89f; }
+.fSize {
+	color: #444444;
+	background-color: #ededed;
+	text-align: left;
+	display: block;
+	padding: 2px;
+}
+.icon { padding: 35px 10px 10px; }
+.thumbnail { margin: 4px auto; height: 64px; overflow: hidden; }
+img.thumb { padding: 2px; width: auto; height: 78px; }
+img.icon { padding-top: 37px; }
+.filename { background-color: #ededed; margin: 2px; padding: 2px; overflow: hidden; }
+.filename a { color: #003366; font-size: 10px; text-decoration: none; }
+fieldset.fUpload { background-color: #f0f0f0; -moz-border-radius: 6px; border-radius: 6px; }
